Use latest jackson2-api to produce CSV